--- a/vignettes/tidytranscriptomics_case_study.Rmd
+++ b/vignettes/tidytranscriptomics_case_study.Rmd
@@ -36,15 +36,6 @@ knitr::opts_chunk$set(echo = TRUE)
 -   The fundamentals of single-cell data analysis
 -   The fundamentals of tidy data analysis
 
-## Slides
-
-<iframe 
-    src="https://docs.google.com/gview?url=https://raw.githubusercontent.com/tidytranscriptomics-workshops/iscb2022_tidytranscriptomics/master/inst/LoveMangiola2022_tidytranscriptomics.pdf&embedded=true" 
-    scrolling="yes" 
-    style="width:100%; height:600px;" 
-    frameborder="0">
-</iframe>
-
 ## Getting started
 
 ### Cloud
@@ -60,7 +51,19 @@ We will use the Cloud during the ISCB workshop and this method is available if y
 
 Alternatively, you can view the material at the workshop webpage [here](https://tidytranscriptomics-workshops.github.io/iscb2022_tidytranscriptomics/articles/tidytranscriptomics_case_study.html).
 
+## Introduction to tidytranscriptomics
+
+<iframe 
+    src="https://docs.google.com/gview?url=https://raw.githubusercontent.com/tidytranscriptomics-workshops/iscb2022_tidytranscriptomics/master/inst/LoveMangiola2022_tidytranscriptomics.pdf&embedded=true" 
+    scrolling="yes" 
+    style="width:100%; height:600px;" 
+    frameborder="0">
+</iframe>
+
+# Part 1 Introduction to tidyseurat
+
 ```{r message = FALSE}
+# Load packages
 library(Seurat)
 library(ggplot2)
 library(plotly)
@@ -71,7 +74,7 @@ library(dittoSeq)
 ```
 
 
-## Introduction to tidyseurat
+
 
 Seurat is a very popular analysis toolkit for single cell RNA sequencing data [@butler2018integrating; @stuart2019comprehensive].
 
@@ -93,6 +96,20 @@ If we load the *tidyseurat* package and then view the single cell data, it now d
 library(tidyseurat)
 
 seurat_obj 
+```
+
+If we want to revert to the standard SingleCellExperiment view we can do that.
+
+```{r}
+options("restore_Seurat_show" = TRUE)
+seurat_obj
+```
+
+If we want to revert back to tidy SingleCellExperiment view we can.
+
+```{r}
+options("restore_Seurat_show" = FALSE)
+seurat_obj
 ```
 
 It can be interacted with using [Seurat commands](https://satijalab.org/seurat/articles/essential_commands.html) such as `Assays`.
@@ -166,7 +183,7 @@ seurat_obj |> select(sample_id, sample, BCB)
 ```
 
 
-## Case study
+# Part 2 Signature visualisation
 
 We will now demonstrate a real-world example of the power of using tidy transcriptomics packages in single cell analysis. For more information on single-cell analysis steps performed in a tidy way please see the [ISMB2021 workshop](https://tidytranscriptomics-workshops.github.io/ismb2021_tidytranscriptomics/articles/tidytranscriptomics.html).
 
@@ -454,11 +471,160 @@ pbmc |>
 
 ```
 
-## Exercises
+### Exercises
 
 1. What proportion of all cells are gamma-delta T cells?  
 
 2. There is a cluster of cells characterised by a low RNA output (nCount_RNA). Use tidygate to identify the cell composition (curated_cell_type) of that cluster.
+
+# Part 3 Pseudobulk analyses
+
+Next we want to identify genes whose transcription is affected by treatment in this dataset, comparing treated and untreated patients. We can do this with pseudobulk analysis. We aggregate cell-wise transcript abundance into pseudobulk samples and can then perform hypothesis testing using the very well established bulk RNA sequencing tools. For example, we can use edgeR in tidybulk to perform differential expression testing. For more details on pseudobulk analysis see [here](https://hbctraining.github.io/scRNA-seq/lessons/pseudobulk_DESeq2_scrnaseq.html).
+
+We want to do it for each cell type and the tidy transcriptomics ecosystem makes this very easy. 
+
+
+### Create pseudobulk samples
+
+To create pseudobulk samples from the single cell samples, we will use a helper function called `aggregate_cells`, available in this workshop package. This function will combine the single cells into a group for each cell type for each sample.
+
+```{r warning=FALSE, message=FALSE, echo=FALSE}
+library(glue)
+library(tidyr)
+library(purrr)
+library(patchwork)
+
+# bulk RNA-seq libraries
+library(tidybulk)
+library(tidySummarizedExperiment)
+```
+
+```{r}
+pseudo_bulk <-
+  sce_obj |>
+  LoveMangiola2022tidytranscriptomics::aggregate_cells(c(sample, cell_type), assays = "counts")
+
+pseudo_bulk
+```
+
+### Tidybulk and tidySummarizedExperiment
+
+With `tidySummarizedExperiment` and `tidybulk` it is easy to split the data into groups and perform analyses on each without needing to create separate objects.
+
+```{r, echo=FALSE, out.width = "800px"}
+knitr::include_graphics("../man/figures/new_SE_usage-01.png")
+```
+
+We use tidyverse `nest` to group the data. The command below will create a tibble containing a column with a SummarizedExperiment object for each cell type. `nest` is similar to tidyverse `group_by`, except with `nest` each group is stored in a single row, and can be a complex object such as a plot or SummarizedExperiment.
+
+```{r}
+pseudo_bulk_nested <- 
+  pseudo_bulk |>
+  nest(grouped_summarized_experiment = -cell_type)
+
+pseudo_bulk_nested
+```
+
+To explore the grouping, we can use tidyverse `slice` to choose a row (cell_type) and `pull` to extract the values from a column. If we pull the data column we can view the SummarizedExperiment object. 
+
+```{r}
+pseudo_bulk_nested |>
+  slice(1) |>
+  pull(grouped_summarized_experiment)
+```
+
+We can then identify differentially expressed genes for each cell type for our condition of interest, treated versus untreated patients. We use tidyverse `map` to apply differential expression functions to each cell type group in the nested data. The result columns will be added to the SummarizedExperiment objects.
+
+```{r message=FALSE, warning=FALSE}
+# Differential transcription abundance
+pseudo_bulk <-
+    
+  pseudo_bulk_nested |>
+    
+  # map accepts a data column (.x) and a function. It applies the function to each element of the column.
+  mutate(grouped_summarized_experiment = map(
+    grouped_summarized_experiment,
+    ~ .x |>
+        
+      # Removing genes with low expression
+      identify_abundant(factor_of_interest = treatment) |>
+        
+      # Scaling counts for sequencing depth	
+      scale_abundance(method="TMMwsp") |>
+      
+      # Testing for differential expression using edgeR quasi likelihood	
+      test_differential_abundance(~treatment, method="edgeR_quasi_likelihood", scaling_method="TMMwsp")
+  ))
+```
+
+The output is again a tibble containing a SummarizedExperiment object for each cell type.
+
+```{r}
+pseudo_bulk
+```
+
+If we pull out the SummarizedExperiment object for the first cell type, as before, we can see it now has columns containing the differential expression results (e.g. logFC, PValue).
+
+```{r}
+pseudo_bulk |>
+  slice(1) |>
+  pull(grouped_summarized_experiment)
+```
+
+It is useful to create plots for significant genes to visualise the transcriptional abundance in the groups being compared (treated and untreated). We can do this for each cell type without needing to create multiple objects. 
+
+```{r message = FALSE}
+pseudo_bulk <-
+    
+  pseudo_bulk |>
+    
+  # Filter out significant
+  # using a high FDR value as this is toy data
+  mutate(grouped_summarized_experiment = map(
+  	grouped_summarized_experiment, 
+  	~ filter(.x, FDR < 0.5)
+  )) |>
+    
+  # Filter cell types with no differential abundant gene-transcripts
+  # map_int is map that returns integer instead of list
+  filter(map_int(grouped_summarized_experiment, ~ nrow(.x)) > 0) |>
+
+  # Plot significant genes for each cell type
+  # map2 is map that accepts 2 input columns (.x, .y) and a function
+  mutate(plot = map2(
+    grouped_summarized_experiment, cell_type,
+    ~ .x |>
+      ggplot(aes(treatment, counts_scaled + 1)) +
+      geom_boxplot(aes(fill = treatment)) +
+      geom_jitter() +
+      scale_y_log10() +
+      facet_wrap(~.feature) +
+      ggtitle(.y)
+  ))
+```
+
+The output is a nested table with a column containing a plot for each cell type.
+
+```{r}
+pseudo_bulk
+```
+
+We'll use slice and pull again to have a look at one of the plots.
+
+```{r}
+pseudo_bulk |>
+  slice(1) |>
+  pull(plot)
+```
+
+We can extract all plots and plot with `wrap_plots` from the patchwork package. 
+
+```{r, fig.height = 8}
+pseudo_bulk |>
+  pull(plot) |>
+  wrap_plots() &
+  LoveMangiola2022tidytranscriptomics::theme_multipanel
+```
 
 **Session Information**
 
