update actions and website

--- a/vignettes/solutions.Rmd
+++ b/vignettes/solutions.Rmd
@@ -1,69 +1,54 @@
 ---
-title: "solutions"
-author: "Stefano Mangiola and Maria Doyle"
-date: "2/18/2022"
-output: html_document
+title: "Solutions"
+output: rmarkdown::html_vignette
+vignette: >
+  %\VignetteIndexEntry{Solutions}
+  %\VignetteEngine{knitr::rmarkdown}
+  %\VignetteEncoding{UTF-8}
 ---
 
 ```{r message = FALSE}
-library(Seurat)
+library(SingleCellExperiment)
 library(ggplot2)
 library(plotly)
 library(dplyr)
 library(colorspace)
-library(SeuratWrappers)
 library(dittoSeq)
+library(tidyseurat)
+
+seurat_obj <- bioc2022tidytranscriptomics::seurat_obj
 ```
 
 ## Question 1
 
-What is the proportion of gamma-delta T cells, among all cells?
+What proportion of all cells are gamma-delta T cells? Use signature_score > 0.7 to identify gamma-delta T cells.
 
-```{r, eval=FALSE}
-
+```{r}
 seurat_obj |>
-  
   
   join_features(
     features = c("CD3D", "TRDC", "TRGC1", "TRGC2", "CD8A", "CD8B"),
-    shape = "wide",
-    assay = "SCT"
-    
+    shape = "wide"
   ) |>
   
   mutate(signature_score =
-           scales::rescale(CD3D + TRDC + TRGC1+ TRGC2, to=c(0,1)) -
+           scales::rescale(CD3D + TRDC + TRGC1 + TRGC2, to=c(0,1)) -
            scales::rescale(CD8A + CD8B, to=c(0,1))
   ) |>
 
-  mutate(gate = tidygate::gate_int(
-    UMAP_1, UMAP_2, 
-    .size = 0.1, 
-    .color =signature_score
-  )) |>
+  mutate(gamma_delta = signature_score > 0.7) |>
   
-  count(gate) %>% 
+  count(gamma_delta) |> 
   summarise(proportion = n/sum(n))
-
-
 ```
 
 ## Question 2
 
-There is a cluster of cells characterised by a low RNA output (nCount_RNA). Use tidygate to asses the cell composition (curated_cell_type) of that cluster.
+There is a cluster of cells characterised by a low RNA output (nCount_RNA < 100). Identify the cell composition (cell_type) of that cluster.
 
 
-```{r, eval=FALSE}
-
+```{r}
 seurat_obj |>
-
-    mutate(gate = tidygate::gate_int(
-        UMAP_1, UMAP_2, 
-        .size = 0.1, 
-        .color =nCount_RNA 
-    )) %>% 
-  
-    filter(gate==1) %>% 
-    count(curated_cell_type)
-
+    filter(nCount_RNA < 100) %>% 
+    count(cell_type)
 ```
